--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo1",
+  "name": "demo2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
+  },
   "dependencies": {
+    "@koa/router": "^9.4.0",
     "koa": "^2.13.0",
-    "koa-router": "^9.4.0"
+    "koa-route": "^3.2.0",
+    "koa-static": "^5.0.0"
   }
 }
